Finish intial Layout and some routes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,22 @@
  *= require_self
  */
  @import 'materialize';
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
+
+
+.container {
+	width: 80%;
+}
+
+footer.page-footer{
+	margin-top: 80px;
+}
