--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	 <%= render 'layouts/header' %>
+	<main>
+		<div class="container">
+		<%= yield %>
+	</div>
+	</main>
+	<%= render 'layouts/footer' %>
 </body>
 </html>
