--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
 	 <%= render 'layouts/header' %>
 	<main>
 		<div class="container">
-		<%= yield %>
-	</div>
+	      <% flash.each do |message_type, message| %>
+	        <div class="alert alert-<%= message_type %>"><%= message %></div>
+	      <% end %>
+			<%= yield %>
+		</div>
 	</main>
+	<%#= debug(params) if Rails.env.development? %>
 	<%= render 'layouts/footer' %>
 </body>
 </html>
