--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,37 @@
 <%= provide(:title,"Sign up") %>
 
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="row">
+	<div class="col s12 m6 l6 offset-l3" id="signup_card">
+	  <div class="card transparent">
+
+	    <div class="card-content indigo-text text-lighten-4">
+	      <span class="card-title"> <h4 class="center-align">Sign up</h4></span>
+	      
+	      <%= form_for(@user) do |f| %>
+
+	      		<%= render 'shared/error_messages' %>
+		      <div class="input-field">
+			      <%= f.label :name %>
+			      <%= f.text_field :name ,class: "validate" %>
+		      </div>
+		      <div class="input-field">
+			      <%= f.label :email %>
+			      <%= f.email_field :email ,class: "validate" %>
+		      </div>
+		      <div class="input-field">
+		      	<%= f.label :password %>
+		      	<%= f.password_field :password ,class: "validate" %>
+		      </div>
+
+		      <div class="input-field">
+		      	<%= f.label :password_confirmation,"Confirmation" %>
+		      	<%= f.password_field :password_confirmation ,class: "validate" %>
+		      </div>
+		      <br>
+		      <%= f.submit "Register" ,class: "btn" %>
+		      	
+	      <% end %> 
+	    </div>
+	  </div>
+	</div>
+</div>
