Sign up Complete

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
 	<nav>
-		<div class="nav-wrapper green accent-3">
+		<div class="nav-wrapper indigo">
 			<div style="margin-left: 30px"><%= link_to "Tweak", root_path, id: "logo" ,class: "brand-logo" %></div>
 			  <ul id="nav-mobile" class="right hide-on-med-and-down">
 			    <li><%= link_to "Profile" ,'#'%></li>
